# controllers/track/deleteTrack.js
@@ -1,0 +1,28 @@
+// import mysql from "mysql"
+
+export const deleteTrack = async (req, res) => {
+//   /* #swagger.tags = ['Tracks']
+//   #swagger.description = 'Delete one's track on one item' */
+//   const name = req.params.myName
+//   const title = req.params.title
+//   var query = `
+//   DELETE FROM TRACK WHERE track_item_id = ? AND track_user_name = ?`;
+
+//   var db = mysql.createConnection({
+//     // connectTimeout  : 60 * 60 * 1000,
+//     // Change it to the public IP generated by ngrok
+//     host: "127.0.0.1",
+//     port: process.env.DB_PORT,
+//     user: "root",
+//     password: "123456",
+//     database: "ShopDB",
+//     multipleStatements: true
+//   })
+//   db.connect();
+  
+//   db.query(query, [], (err, rows) => {
+//     if (err) throw err;
+//     return res.status(200).json({ message: "success" });
+//     })
+//   // db.end();
+}
